Responsive header added

--- a/index.html
+++ b/index.html
@@ -18,50 +18,62 @@
         <header aria-label="Navigation & Logo">
           <!-- Grid Header -->
           <div class="header-content">
-            <!-- Header Flex Box-->
-            <div class="header-content-flex flex-center">
-              <div class="flex-box">
-                <!-- Logo & Nav Flex Box-->
-                <div class="header-content-flex flex-gap-sm-a vertical-center">
-                  <!-- Logo -->
-                  <div class="logo">
-                    <img
-                      src="./assets/media/img/logo.svg"
-                      alt="Logo Silicon AB"
-                    />
+            <div class="header-wrapper">
+              <!-- Header Flex Box-->
+              <div class="header-content-flex flex-center">
+                <div class="flex-box">
+                  <!-- Logo & Nav Flex Box-->
+                  <div
+                    class="header-content-flex flex-gap-sm-a vertical-center"
+                  >
+                    <!-- Logo -->
+                    <div class="logo">
+                      <img
+                        src="./assets/media/img/logo.svg"
+                        alt="Logo Silicon AB"
+                      />
+                    </div>
+                    <!-- Logo End -->
+                    <!-- Navigation-->
+                    <div class="nav vertical-center font-size-standard">
+                      <nav aria-label="Navigation Menu">
+                        <ul class="main-menu">
+                          <li><a href="#">Features</a></li>
+                        </ul>
+                      </nav>
+                    </div>
+                    <!-- Navigation End -->
                   </div>
-                  <!-- Logo End -->
-                  <!-- Navigation-->
-                  <div class="nav vertical-center font-size-standard">
-                    <nav aria-label="Navigation Menu">
-                      <ul class="main-menu">
-                        <li><a href="#">Features</a></li>
-                      </ul>
-                    </nav>
-                  </div>
-                  <!-- Navigation End -->
+                  <!-- Logo & Nav Flex Box END-->
                 </div>
-                <!-- Logo & Nav Flex Box END-->
-              </div>
-              <div class="flex-box">
-                <!-- Buttons Flex Box-->
-                <div
-                  class="header-content-flex flex-gap-sm-a vertical-center flex-right-horizontal"
-                >
-                  <div class="dark-mode-switch">
-                    <label class="font-size-standard">Dark Mode</label>
-                    <input type="checkbox" name="dark-mode" value="false" />
+                <div class="flex-box">
+                  <!-- Buttons Flex Box-->
+                  <div
+                    class="header-content-flex flex-gap-sm-b vertical-center flex-right-horizontal"
+                  >
+                    <div class="dark-mode-switch">
+                      <label class="font-size-standard">Dark Mode</label>
+                      <input type="checkbox" name="dark-mode" value="false" />
+                    </div>
+                    <div>
+                      <button class="btn-sign-in-up">Sign in / up</button>
+                    </div>
+                    <div class="mobile-menu">
+                      <img
+                        src="/assets/media/img/nav-toggle.svg"
+                        alt="Mobile Menu Holder"
+                      />
+                    </div>
                   </div>
-                  <div>
-                    <button class="btn-sign-in-up">Sign in / up</button>
-                  </div>
+                  <!-- Buttons Flex Box END-->
                 </div>
-                <!-- Buttons Flex Box END-->
               </div>
             </div>
           </div>
         </header>
-        <main aria-label="Main Content"></main>
+        <main aria-label="Main Content">
+          <section aria-label="Promotion Banner Content"></section>
+        </main>
         <footer aria-label="Footer, Copyright and Company information"></footer>
       </div>
     </div>
