--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
       <div class="grid">
         <header aria-label="Navigation & Logo">
           <!-- Grid Header -->
-          <div class="header-content">
+          <div class="header-content grid-header">
             <div class="header-wrapper">
               <!-- Header Flex Box-->
-              <div class="header-content-flex flex-center">
+              <div class="header-content-flex margin-center">
                 <div class="flex-box">
                   <!-- Logo & Nav Flex Box-->
                   <div
@@ -72,7 +72,20 @@
           </div>
         </header>
         <main aria-label="Main Content">
-          <section aria-label="Promotion Banner Content"></section>
+          <section aria-label="Promotion Banner Content">
+            <!-- Banner / Promotion Content-->
+            <div class="grid-banner-content background-grey">
+              <!-- Flex Content-->
+              <div class="banner-content-flex flex-center">
+                <div>Title</div>
+                <div>Text</div>
+                <div>App Buttons</div>
+                <div>Phone Image</div>
+              </div>
+              <!-- Flex Content End-->
+            </div>
+            <!-- Banner / Promotion Content End-->
+          </section>
         </main>
         <footer aria-label="Footer, Copyright and Company information"></footer>
       </div>
