Banner, Phone ready

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
           <div class="header-content grid-header">
             <div class="header-wrapper">
               <!-- Header Flex Box-->
-              <div class="header-content-flex margin-center">
+              <div class="header-content-flex margin-center content-max-width">
                 <div class="flex-box">
                   <!-- Logo & Nav Flex Box-->
                   <div
@@ -72,20 +72,76 @@
           </div>
         </header>
         <main aria-label="Main Content">
-          <section aria-label="Promotion Banner Content">
-            <!-- Banner / Promotion Content-->
-            <div class="grid-banner-content background-grey">
-              <!-- Flex Content-->
-              <div class="banner-content-flex flex-center">
-                <div>Title</div>
-                <div>Text</div>
-                <div>App Buttons</div>
-                <div>Phone Image</div>
+          <div class="main-wrapper">
+            <section aria-label="Promotion Banner Content">
+              <!-- Banner / Promotion Content-->
+              <div class="grid-banner-content">
+                <!-- Flex Content-->
+                <div
+                  class="banner-content-flex margin-center content-max-width"
+                >
+                  <div class="flex-banner-box">
+                    <h1
+                      class="padding-top-2 font-color-heading extra-bold promo-size-text-a text-center"
+                    >
+                      Manage All Your Money in One App
+                    </h1>
+                  </div>
+                  <div class="flex-banner-box">
+                    <p
+                      class="padding-top-bottom-2 font-color-text font-regular font-size-regular text-center"
+                    >
+                      We offer you a new generation of the mobile banking. Save,
+                      spend & manage money in your pocket.
+                    </p>
+                  </div>
+                  <div class="flex-banner-box text-center">
+                    <a
+                      href="#"
+                      class="flex flex-center flex-items-center text-decoration-none"
+                    >
+                      <img
+                        src="/assets/media/img/app-apple-store.svg"
+                        alt="Apple
+                    Store Link"
+                      />
+                    </a>
+                    <a
+                      href="#"
+                      class="flex flex-center flex-items-center text-decoration-none"
+                    >
+                      <img
+                        class="padding-top-1"
+                        src="/assets/media/img/app-android-store.svg"
+                        alt="Android
+                  Store Link"
+                      />
+                    </a>
+                  </div>
+                  <div class="flex-banner-box text-center padding-top-bottom-2">
+                    <div class="inline-block">
+                      <a
+                        href="#"
+                        class="flex flex-center flex-items-center text-decoration-none"
+                      >
+                        <img
+                          class="with-4 padding-right-1"
+                          src="/assets/media/img/arrow-button.svg"
+                          alt="Arrow Down"
+                        />
+                        <span class="font-link-small font-color-text"
+                          >Discover more</span
+                        >
+                      </a>
+                    </div>
+                  </div>
+                  <div class="flex-banner-box"></div>
+                </div>
+                <!-- Flex Content End-->
               </div>
-              <!-- Flex Content End-->
-            </div>
-            <!-- Banner / Promotion Content End-->
-          </section>
+              <!-- Banner / Promotion Content End-->
+            </section>
+          </div>
         </main>
         <footer aria-label="Footer, Copyright and Company information"></footer>
       </div>
