--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
     <link rel="stylesheet" href="./assets/css/base.css" />
     <link rel="stylesheet" href="./assets/css/fonts.css" />
     <link rel="stylesheet" href="./assets/css/components.css" />
+    <link rel="stylesheet" href="./assets/css/w3schools.css" />
+    <script
+      src="https://kit.fontawesome.com/4d2af45ec4.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
     <div class="container margin-center">
@@ -29,10 +34,12 @@
                     >
                       <!-- Logo -->
                       <div class="logo">
-                        <img
-                          src="./assets/media/img/logo.svg"
-                          alt="Logo Silicon AB"
-                        />
+                        <a href="#">
+                          <img
+                            src="./assets/media/img/logo.svg"
+                            alt="Logo Silicon AB"
+                          />
+                        </a>
                       </div>
                       <!-- Logo End -->
                       <!-- Navigation-->
@@ -53,17 +60,23 @@
                     class="header-content-flex flex-gap-sm-a vertical-center flex-right-horizontal"
                   >
                     <div class="dark-mode-switch">
-                      <label class="font-size-standard">Dark Mode</label>
-                      <input type="checkbox" name="dark-mode" value="false" />
+                      <!-- Rounded switch -->
+                      <label class="padding-right-05 dark-mode-label"
+                        >Dark Mode</label
+                      >
+                      <label class="switch">
+                        <input type="checkbox" />
+                        <span class="slider round"></span>
+                      </label>
                     </div>
-                    <div>
-                      <button class="btn-sign-in-up">Sign in / up</button>
+                    <div class="padding-right-05 padding-left-1">
+                      <button class="btn-sign-in-up font-semi">
+                        <i class="fa-regular fa-user padding-right-05"></i>
+                        Sign in / up
+                      </button>
                     </div>
                     <div class="mobile-menu">
-                      <img
-                        src="/assets/media/img/nav-toggle.svg"
-                        alt="Mobile Menu Holder"
-                      />
+                      <i class="fa-solid fa-bars fa-lg"></i>
                     </div>
                   </div>
                 </div>
@@ -80,9 +93,68 @@
               <div class="grid-main">
                 <!-- Banner & Promotion Content -->
                 <div class="banner-promotion-grid">
-                  <div class="promotion-title">Promotion text</div>
-                  <div class="promotion-text-app">Text & App Links</div>
-                  <div class="promotion-link">Discover more</div>
+                  <div class="promotion-title">
+                    <h1
+                      class="padding-top-2 font-color-prmotion-text extra-bold promo-size-text-b"
+                    >
+                      Manage All Your Money in One App
+                    </h1>
+                  </div>
+                  <div class="promotion-text-app">
+                    <p
+                      class="padding-top-bottom-15 font-color-text font-regular font-size-regular"
+                    >
+                      We offer you a new generation of the mobile banking. Save,
+                      spend & manage money in your pocket.
+                    </p>
+                    <div class="flex-banner-app-links-box">
+                      <a href="#" class="text-decoration-non">
+                        <img
+                          class="apps-image-links-small"
+                          src="/assets/media/img/app-apple-store-small.svg"
+                          alt="Apple
+                      Store Link"
+                        />
+                        <img
+                          class="apps-image-links-normal"
+                          src="/assets/media/img/app-apple-store.svg"
+                          alt="Apple
+                    Store Link"
+                        />
+                      </a>
+                      <a href="#" class="text-decoration-none">
+                        <img
+                          class="apps-image-links-small padding-left-1"
+                          src="/assets/media/img/app-apple-store-small.svg"
+                          alt="Apple
+                  Store Link"
+                        />
+                        <img
+                          class="padding-top-1 apps-image-links-normal"
+                          src="/assets/media/img/app-android-store.svg"
+                          alt="Android
+                    Store Link"
+                        />
+                      </a>
+                    </div>
+                  </div>
+                  <div class="promotion-link">
+                    <div class="inline-block">
+                      <a
+                        href="#"
+                        class="flex flex-center flex-items-center text-decoration-none"
+                      >
+                        <img
+                          class="with-4 padding-right-1"
+                          src="/assets/media/img/arrow-button.svg"
+                          alt="Arrow Down"
+                        />
+                        <span class="font-link-small font-color-text"
+                          >Discover more</span
+                        >
+                      </a>
+                    </div>
+                  </div>
                   <div class="promotion-image">Phone Image</div>
                 </div>
                 <!-- Banner & Promotion Content End-->
