Failed, need rebuilding

--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
     ></script>
   </head>
   <body>
+    <div class="background-wrapper">
+      <div class="banner-background-gradient"></div>
+    </div>
     <div class="container margin-center">
       <!-- Using Grid för General Layout-->
       <div class="main-grid">
@@ -69,8 +72,8 @@
                         <span class="slider round"></span>
                       </label>
                     </div>
-                    <div class="padding-right-05 padding-left-1">
-                      <button class="btn-sign-in-up font-semi">
+                    <div>
+                      <button type="submit" class="btn-sign-in-up font-semi">
                         <i class="fa-regular fa-user padding-right-05"></i>
                         Sign in / up
                       </button>
@@ -95,7 +98,7 @@
                 <div class="banner-promotion-grid">
                   <div class="promotion-title">
                     <h1
-                      class="padding-top-2 font-color-prmotion-text extra-bold promo-size-text-b"
+                      class="padding-top-2 font-color-heading-text extra-bold promo-size-text-b"
                     >
                       Manage All Your Money in One App
                     </h1>
@@ -155,13 +158,19 @@
                       </a>
                     </div>
                   </div>
-                  <div class="promotion-image">Phone Image</div>
+                  <div class="promotion-image">
+                    <img
+                      class="iphone-1"
+                      src="/assets/media/img/promotion-phone-pro-12-1.svg"
+                      alt="Iphone Pro Your Cards"
+                    />
+                  </div>
                 </div>
                 <!-- Banner & Promotion Content End-->
 
                 <!-- Features Content -->
                 <div class="app-features-grid">
-                  <div class="app-features-companies">lorem200</div>
+                  <div class="app-features-companies">loasd00</div>
                   <div class="app-features-phone-image">Big Fucking Phone</div>
                   <div class="app-features-text">Features Text</div>
                 </div>
