--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="./assets/css/base.css" />
     <link rel="stylesheet" href="./assets/css/fonts.css" />
     <link rel="stylesheet" href="./assets/css/components.css" />
+    <link rel="stylesheet" href="./assets/css/utils.css" />
     <link rel="stylesheet" href="./assets/css/w3schools.css" />
     <script
       src="https://kit.fontawesome.com/4d2af45ec4.js"
@@ -17,180 +18,53 @@
     ></script>
   </head>
   <body>
-    <div class="background-wrapper">
-      <div class="banner-background-gradient"></div>
-    </div>
-    <div class="container margin-center">
-      <!-- Using Grid för General Layout-->
-      <div class="main-grid">
-        <header aria-label="Navigation & Logo">
-          <!-- Grid Header -->
-          <div class="header-content grid-header">
-            <div class="header-wrapper">
-              <!-- Grid Logo & Navigation -->
-              <div class="header-grid">
-                <div class="logo-nav">
-                  <div class="header-content-flex">
-                    <!-- Logo & Nav Flex Box-->
-                    <div
-                      class="header-content-flex flex-gap-sm-a vertical-center"
-                    >
-                      <!-- Logo -->
-                      <div class="logo">
-                        <a href="#">
-                          <img
-                            src="./assets/media/img/logo.svg"
-                            alt="Logo Silicon AB"
-                          />
-                        </a>
-                      </div>
-                      <!-- Logo End -->
-                      <!-- Navigation-->
-                      <div class="nav vertical-center font-size-standard">
-                        <nav aria-label="Navigation Menu">
-                          <ul class="main-menu">
-                            <li><a href="#">Features</a></li>
-                          </ul>
-                        </nav>
-                      </div>
-                      <!-- Navigation End -->
-                    </div>
-                    <!-- Logo & Nav Flex Box END-->
-                  </div>
+    <!-- Header & Promotion Area-->
+    <div class="gradient-container">
+      <!-- Header-->
+      <header aria-label="Navigation & Logo">
+        <div class="header-wrapper">
+          <div class="flex-header flex fa-i-c">
+            <!-- Logo -->
+            <div>
+              <div class="flex fa-i-c">
+                <div>
+                  <a href="#">
+                    <img
+                      src="./assets/media/img/logo.svg"
+                      alt="Logo Silicon AB"
+                    />
+                  </a>
                 </div>
-                <div class="header-extra-menu">
-                  <div
-                    class="header-content-flex flex-gap-sm-a vertical-center flex-right-horizontal"
-                  >
-                    <div class="dark-mode-switch">
-                      <!-- Rounded switch -->
-                      <label class="padding-right-05 dark-mode-label"
-                        >Dark Mode</label
-                      >
-                      <label class="switch">
-                        <input type="checkbox" />
-                        <span class="slider round"></span>
-                      </label>
-                    </div>
-                    <div>
-                      <button type="submit" class="btn-sign-in-up font-semi">
-                        <i class="fa-regular fa-user padding-right-05"></i>
-                        Sign in / up
-                      </button>
-                    </div>
-                    <div class="mobile-menu">
-                      <i class="fa-solid fa-bars fa-lg"></i>
-                    </div>
-                  </div>
+                <div class="navigation">
+                  <nav aria-label="Navigation Menu">
+                    <ul class="main-menu">
+                      <li><a href="#">Features</a></li>
+                    </ul>
+                  </nav>
                 </div>
               </div>
-              <!-- Grid Logo & Navigation End-->
+            </div>
+            <!-- Sub Menus-->
+            <div>
+              <div class="flex fa-i-c">
+                <div class="dark-mode-switch">
+                  <!-- Rounded switch -->
+                  <label class="label-text">Dark Mode</label>
+                  <label class="switch">
+                    <input type="checkbox" />
+                    <span class="slider round"></span>
+                  </label>
+                </div>
+                <div>
+                  <i class="fa-solid fa-bars fa-lg icon-color"></i>
+                </div>
+              </div>
             </div>
           </div>
-          <!-- Grid Header End -->
-        </header>
-        <main aria-label="Main Content">
-          <div class="main-wrapper">
-            <section aria-label="Promotion Banner Content">
-              <!-- Main Grid -->
-              <div class="grid-main">
-                <!-- Banner & Promotion Content -->
-                <div class="banner-promotion-grid">
-                  <div class="promotion-title">
-                    <h1
-                      class="padding-top-2 font-color-heading-text extra-bold promo-size-text-b"
-                    >
-                      Manage All Your Money in One App
-                    </h1>
-                  </div>
-                  <div class="promotion-text-app">
-                    <p
-                      class="padding-top-bottom-15 font-color-text font-regular font-size-regular"
-                    >
-                      We offer you a new generation of the mobile banking. Save,
-                      spend & manage money in your pocket.
-                    </p>
-                    <div class="flex-banner-app-links-box">
-                      <a href="#" class="text-decoration-non">
-                        <img
-                          class="apps-image-links-small"
-                          src="/assets/media/img/app-apple-store-small.svg"
-                          alt="Apple
-                      Store Link"
-                        />
-                        <img
-                          class="apps-image-links-normal"
-                          src="/assets/media/img/app-apple-store.svg"
-                          alt="Apple
-                    Store Link"
-                        />
-                      </a>
-                      <a href="#" class="text-decoration-none">
-                        <img
-                          class="apps-image-links-small padding-left-1"
-                          src="/assets/media/img/app-apple-store-small.svg"
-                          alt="Apple
-                  Store Link"
-                        />
-                        <img
-                          class="padding-top-1 apps-image-links-normal"
-                          src="/assets/media/img/app-android-store.svg"
-                          alt="Android
-                    Store Link"
-                        />
-                      </a>
-                    </div>
-                  </div>
-                  <div class="promotion-link">
-                    <div class="inline-block">
-                      <a
-                        href="#"
-                        class="flex flex-center flex-items-center text-decoration-none"
-                      >
-                        <img
-                          class="with-4 padding-right-1"
-                          src="/assets/media/img/arrow-button.svg"
-                          alt="Arrow Down"
-                        />
-                        <span class="font-link-small font-color-text"
-                          >Discover more</span
-                        >
-                      </a>
-                    </div>
-                  </div>
-                  <div class="promotion-image">
-                    <img
-                      class="iphone-1"
-                      src="/assets/media/img/promotion-phone-pro-12-1.svg"
-                      alt="Iphone Pro Your Cards"
-                    />
-                  </div>
-                </div>
-                <!-- Banner & Promotion Content End-->
-
-                <!-- Features Content -->
-                <div class="app-features-grid">
-                  <div class="app-features-companies">loasd00</div>
-                  <div class="app-features-phone-image">Big Fucking Phone</div>
-                  <div class="app-features-text">Features Text</div>
-                </div>
-
-                <!-- Features Content End -->
-              </div>
-              <!-- Main Grid End -->
-            </section>
-          </div>
-        </main>
-        <footer aria-label="Footer, Copyright and Company information">
-          <div class="footer-wrapper">
-            <section aria-label="Promotion Banner Content">
-              <!-- Main Grid -->
-              <div class="grid-footer"></div>
-              <!-- Main Grid End -->
-            </section>
-          </div>
-        </footer>
-      </div>
+        </div>
+      </header>
+      <!-- Header End-->
     </div>
+    <!-- Header & Promotion Area End-->
   </body>
 </html>
