--- a/index.html
+++ b/index.html
@@ -48,15 +48,26 @@
             <div>
               <div class="flex fa-i-c">
                 <div class="dark-mode-switch">
-                  <!-- Rounded switch -->
                   <label class="label-text">Dark Mode</label>
+                </div>
+                <div class="dark-mode-switch label-header">
+                  <!-- Rounded switch -->
+
                   <label class="switch">
                     <input type="checkbox" />
                     <span class="slider round"></span>
                   </label>
                 </div>
-                <div>
-                  <i class="fa-solid fa-bars fa-lg icon-color"></i>
+                <div class="mobile-menu">
+                  <a href="#">
+                    <i class="fa-solid fa-bars fa-lg icon-color"></i>
+                  </a>
+                </div>
+                <div class="btn-sign-button-container">
+                  <button type="submit" class="btn-sign-in-up font-semi">
+                    <i class="fa-regular fa-user padding-right-05"></i>
+                    Sign in / up
+                  </button>
                 </div>
               </div>
             </div>
