Promo, ver 0.5 ready

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
               <div class="promotion-grid">
                 <div class="promotion-grid-header-text">
                   <h1
-                    class="text-center font-color-heading-text extra-bold promo-size-text-a"
+                    class="font-color-heading-text extra-bold promo-size-text"
                   >
                     Manage All Your Money in One App
                   </h1>
