Base Skeleton ready

--- a/src/index.html
+++ b/src/index.html
@@ -12,151 +12,37 @@
     ></script>
   </head>
   <body>
-    <!-- Header & Promotion Area-->
-    <div class="base-wrapper">
+    <!-- Container Queries & Skeleton Structure -->
+    <div class="skeleton-wrapper">
       <div class="gradient-container">
-        <div class="container">
-          <!-- Header-->
-          <header aria-label="Navigation & Logo">
-            <div class="header-wrapper">
-              <div class="flex-header flex fa-i-c">
-                <!-- Logo -->
-                <div>
-                  <div class="flex fa-i-c">
-                    <div>
-                      <a href="#">
-                        <img
-                          src="./assets/media/img/logo.svg"
-                          alt="Logo Silicon AB"
-                        />
-                      </a>
-                    </div>
-                    <div class="navigation">
-                      <nav aria-label="Navigation Menu">
-                        <ul class="main-menu">
-                          <li><a href="#">Features</a></li>
-                        </ul>
-                      </nav>
-                    </div>
-                  </div>
-                </div>
-                <!-- Sub Menus-->
-                <div>
-                  <div class="flex fa-i-c">
-                    <div class="dark-mode-switch">
-                      <label class="label-text">Dark Mode</label>
-                    </div>
-                    <div class="dark-mode-switch label-header">
-                      <!-- Rounded switch -->
-
-                      <label
-                        class="switch"
-                        for="slider-light-mode"
-                        title="Toggle dark mode"
-                      >
-                        <input
-                          type="checkbox"
-                          id="slider-light-mode"
-                          placeholder="Click here to Toggle"
-                        />
-                        <span class="slider round"></span>
-                      </label>
-                    </div>
-                    <div class="mobile-menu">
-                      <a href="#" title="Mobile Menu">
-                        <i class="fa-solid fa-bars fa-lg icon-color"></i>
-                      </a>
-                    </div>
-                    <div class="btn-sign-button-container">
-                      <button type="submit" class="btn-sign-in-up font-semi">
-                        <i class="fa-regular fa-user padding-right-05"></i>
-                        Sign in / up
-                      </button>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </header>
-          <main aria-label="Main Content">
-            <div class="main-wrapper">
-              <!-- Promotion Area -->
-              <div class="promotion-grid">
-                <div class="promotion-grid-header-text">
-                  <h1
-                    class="font-color-heading-text extra-bold promo-size-text"
-                  >
-                    Manage All Your Money in One App
-                  </h1>
-                </div>
-                <div class="promotion-grid-text">
-                  <p class="font-color-text font-regular font-size-regular">
-                    We offer you a new generation of the mobile banking. Save,
-                    spend & manage money in your pocket.
-                  </p>
-                </div>
-                <div class="promotion-grid-apps-links">
-                  <div>
-                    <div>
-                      <a href="#">
-                        <img
-                          class="apps-image-links-normal"
-                          src="/assets/media/img/app-apple-store.svg"
-                          alt="Apple
-              Store Link"
-                        />
-                        <img
-                          class="apps-image-links-small"
-                          src="/assets/media/img/app-apple-store-small.svg"
-                          alt="Apple
-                Store Link"
-                        />
-                      </a>
-                    </div>
-                    <div>
-                      <a href="#">
-                        <img
-                          class="padding-top-1 apps-image-links-normal"
-                          src="/assets/media/img/app-android-store.svg"
-                          alt="Android
-          Store Link" />
-                        <img
-                          class="apps-image-links-small padding-left-1"
-                          src="/assets/media/img/app-android-store-small.svg"
-                          alt="Apple
-          Store Link"
-                      /></a>
-                    </div>
-                  </div>
-                </div>
-                <div class="promotion-grid-link">
-                  <a href="#" class="flex discover-more-btn">
-                    <img
-                      src="/assets/media/img/arrow-button.svg"
-                      alt="Arrow Down"
-                    />
-                    <span class="font-link-small font-color-text"
-                      >Discover more</span
-                    >
-                  </a>
-                </div>
-                <div class="promotion-grid-phone">
-                  <img
-                    class="iphone-1"
-                    src="/assets/media/img/promotion-phone-pro-12-1.svg"
-                    alt="Iphone Pro Your Cards"
-                  />
-                </div>
-              </div>
-              <!-- Promotion Area End -->
-            </div>
-          </main>
-          <!-- Header End-->
-        </div>
-        <!-- Header & Promotion Area End-->
+        <!-- Header & Navigation -->
+        <header aria-label="Navigation & Logo">
+          <div class="header-navigation">
+            <div>Logo & Nav</div>
+            <div>Extra Menu</div>
+          </div>
+          <div class="promotion-area">Promotion</div>
+        </header>
+        <!-- Header & Navigation End -->
       </div>
+      <!-- Main Content -->
+      <main aria-label="Main Content">
+        <div class="main-app-features">Features</div>
+        <div class="main-how-works">How does it work</div>
+        <div class="main-app-promotion">Make your money....</div>
+        <div class="main-clients">Clients Love</div>
+        <div class="main-faq">Any questions?</div>
+      </main>
+      <!-- Main Content End-->
+
+      <!-- Footer Content -->
+      <footer aria-label="Footer Content">
+        <div class="footer-content">Footer Content</div>
+      </footer>
+      <!-- Footer Content End -->
+      <!-- Container Queries & Skeleton Structure END -->
     </div>
-    <!-- Inkluderar Native Javascript Stöd-->
+
     <script type="module" src="./js/main.js"></script>
   </body>
 </html>
