--- a/src/index.html
+++ b/src/index.html
@@ -1,48 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Manage All Your Money in One App" />
-    <title>Silicon</title>
 
-    <script
-      src="https://kit.fontawesome.com/4d2af45ec4.js"
-      crossorigin="anonymous"
-    ></script>
-  </head>
-  <body>
-    <!-- Container Queries & Skeleton Structure -->
-    <div class="skeleton-wrapper">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="Manage All Your Money in One App" />
+  <title>Silicon</title>
+
+  <script src="https://kit.fontawesome.com/4d2af45ec4.js" crossorigin="anonymous"></script>
+</head>
+
+<body>
+  <!-- Container Queries & Skeleton Structure -->
+  <div class="skeleton-wrapper">
+    <div class="content-container">
       <div class="gradient-container">
         <!-- Header & Navigation -->
-        <header aria-label="Navigation & Logo">
+        <div class="header-wrapper">
+          <header aria-label="Navigation & Logo"></header>
           <div class="header-navigation">
             <div>Logo & Nav</div>
             <div>Extra Menu</div>
           </div>
           <div class="promotion-area">Promotion</div>
-        </header>
+          </header>
+        </div>
+
         <!-- Header & Navigation End -->
       </div>
       <!-- Main Content -->
-      <main aria-label="Main Content">
+      <div class="main-wrapper">
+        <main aria-label="Main Content"></main>
         <div class="main-app-features">Features</div>
         <div class="main-how-works">How does it work</div>
         <div class="main-app-promotion">Make your money....</div>
         <div class="main-clients">Clients Love</div>
         <div class="main-faq">Any questions?</div>
-      </main>
+        </main>
+      </div>
+
       <!-- Main Content End-->
 
       <!-- Footer Content -->
-      <footer aria-label="Footer Content">
-        <div class="footer-content">Footer Content</div>
-      </footer>
+      <div class="footer-wrapper">
+        <footer aria-label="Footer Content">
+          <div class="footer-content">Footer Content</div>
+        </footer>
+      </div>
       <!-- Footer Content End -->
       <!-- Container Queries & Skeleton Structure END -->
     </div>
+  </div>
 
-    <script type="module" src="./js/main.js"></script>
-  </body>
+  <script type="module" src="./js/main.js"></script>
+</body>
+
 </html>
