Implementing BEM SCSS slowly, Adding more to vars

--- a/src/index.html
+++ b/src/index.html
@@ -13,43 +13,23 @@
 <body>
   <!-- Container Queries & Skeleton Structure -->
   <div class="skeleton-wrapper">
-    <div class="content-container">
-      <div class="gradient-container">
-        <!-- Header & Navigation -->
-        <div class="header-wrapper">
-          <header aria-label="Navigation & Logo"></header>
-          <div class="header-navigation">
-            <div>Logo & Nav</div>
-            <div>Extra Menu</div>
-          </div>
-          <div class="promotion-area">Promotion</div>
-          </header>
+
+    <!-- Header & Navigation Inspired by Hans :)-->
+    <header aria-label="Navigation & Logo" class="header">
+      <nav class="header__nav">
+        <img class="header__img" src="./assets/images/svg/logo.svg" alt="Logo">
+        <ul class="header__menu">
+          <li class="header__menu-item">Features</li>
+        </ul>
+      </nav>
+      <section aria-label="Hero & Promotion Section">
+        <div class="promotion-area">Promotion
         </div>
+      </section>
+    </header>
+    <!-- Header & Navigation End -->
 
-        <!-- Header & Navigation End -->
-      </div>
-      <!-- Main Content -->
-      <div class="main-wrapper">
-        <main aria-label="Main Content"></main>
-        <div class="main-app-features">Features</div>
-        <div class="main-how-works">How does it work</div>
-        <div class="main-app-promotion">Make your money....</div>
-        <div class="main-clients">Clients Love</div>
-        <div class="main-faq">Any questions?</div>
-        </main>
-      </div>
 
-      <!-- Main Content End-->
-
-      <!-- Footer Content -->
-      <div class="footer-wrapper">
-        <footer aria-label="Footer Content">
-          <div class="footer-content">Footer Content</div>
-        </footer>
-      </div>
-      <!-- Footer Content End -->
-      <!-- Container Queries & Skeleton Structure END -->
-    </div>
   </div>
 
   <script type="module" src="./js/main.js"></script>
