Added focus to menu and HSL relative coloring :P

--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,7 @@
         </div>
         <div class="header__menu">
           <ul class="header__menu__navigation">
-            <li class="header__menu__navigation__li-items">Features</li>
+            <li class="header__menu__navigation__li-items" tabindex="0">Features</li>
           </ul>
         </div>
         <div class="header__theme-btn-access">
