Added responsive to header :), looking good

--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
   <div class="skeleton-wrapper">
 
     <!-- Header & Navigation Inspired by Hans :)-->
-    <header aria-label="Navigation & Logo">
+    <header aria-label="Navigation & Logo" class="header_wrapper">
       <nav class="header">
         <div class="header__logo">
           <img class="header__logo__img" src="./assets/images/svg/logo.svg" alt="Logo">
@@ -36,8 +36,9 @@
             <i class="fa-regular fa-user header__theme-btn-access__btn-sign-in-up__user-icon"></i>
             Sign in / up
           </button>
-
-
+          <a class="header__theme-btn-access__bars">
+            <i class="fa-solid fa-bars header__theme-btn-access__bars__icon"></i>
+          </a>
 
         </div>
       </nav>
