Started to work on Hero section

--- a/src/index.html
+++ b/src/index.html
@@ -43,8 +43,10 @@
         </div>
       </nav>
       <section aria-label="Hero & Promotion Section">
-        <div class="hero-section">Promotion
-        </div>
+        <div class="hero-section">
+          <h1>Manage All Your Money in One App</h1>
+          <img src="/src/assets/images/svg/promotion-phone-pro-12-1.svg" alt="Mobile 1">
+          <img src="/src/assets/images/svg/promotion-phone-pro-12-2.svg>" alt="Mobile 2">
       </section>
     </header>
     <!-- Header & Navigation End -->
