--- a/src/index.html
+++ b/src/index.html
@@ -29,7 +29,9 @@
           <span class="header__theme-btn-access__text-span"> Dark Mode </span>
           <label class="header__theme-btn-access__toggle">
             <input class="header__theme-btn-access__toggle__check-box" type="checkbox">
-            <span class="header__theme-btn-access__toggle__slider"></span>
+            <span class="header__theme-btn-access__toggle__slider" aria-label="Slider for Theme" aria-valuenow="0"
+              tabindex="0" role="slider" title="Slider for Theme" aria-valuemin="0" aria-valuemax="1">
+            </span>
           </label>
           <button type="submit"
             class="header__theme-btn-access__btn-sign-in-up header__theme-btn-access__btn-sign-in-up--primary">
@@ -44,9 +46,33 @@
       </nav>
       <section aria-label="Hero & Promotion Section">
         <div class="hero-section">
-          <h1>Manage All Your Money in One App</h1>
-          <img src="/src/assets/images/svg/promotion-phone-pro-12-1.svg" alt="Mobile 1">
-          <img src="/src/assets/images/svg/promotion-phone-pro-12-2.svg>" alt="Mobile 2">
+          <h1 class="hero-section__heading">Manage All Your Money in One App</h1>
+          <p class="hero-section__text-description">
+            We offer you a new generation of the mobile banking.
+            Save, spend & manage money in your pocket.
+          </p>
+          <div class="hero-section__apps-links">
+            <!-- Inspired by Hans for Dynamic Buttons ;)-->
+            <a href="#" title="Apple Store Link" class="
+            hero-section__apps-links__link-item
+            hero-section__apps-links__link-item--desktop">
+              <img src="./assets/images/svg/app-store-btn-group.svg" alt="Apple Store Image">
+            </a>
+            <a href="#" title="Apple Store Link" class="
+            hero-section__apps-links__link-item
+            hero-section__apps-links__link-item--desktop">
+              <img src="./assets/images/svg/app-android-store-btn-group.svg" alt="Android Store Image">
+            </a>
+          </div>
+          <div class="hero-section__discover-more">
+            <a href="#" title="Discover more link" tabindex="0" class="hero-section__discover-more__link-item">
+              <i class="fa-solid fa-chevron-down hero-section__discover-more__link-item__discover-more__icon"></i>
+              <span>Discover more</span></a>
+          </div>
+          <div class="hero-section__mobile-images">
+            Images 1
+            Images 2
+          </div>
       </section>
     </header>
     <!-- Header & Navigation End -->
